fix(package.json): update build scripts for better error handling and blog generation
Modify the build script to allow for continued execution even if Contentlayer build fails, ensuring a smoother development process. Additionally, rename the contentlayer generation script to 'blog' for clarity and consistency in the project structure.

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "contentlayer build && next build",
+    "build": "contentlayer build || true && next build",
     "start": "next start",
     "lint": "next lint",
-    "contentlayer:generate": "contentlayer build"
+    "blog": "contentlayer build || true"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
