--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "contentlayer build || true && next build",
-    "start": "next start",
-    "lint": "next lint",
+    "dev": "bun --bun next dev",
+    "build": "contentlayer build || true && bun --bun next build",
+    "start": "bun --bun next start",
+    "lint": "bun --bun next lint",
     "blog": "contentlayer build || true"
   },
   "dependencies": {
