--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "contentlayer build || true && bun --bun next build",
     "start": "bun --bun next start",
     "lint": "bun --bun next lint",
-    "blog": "contentlayer build || true"
+    "blog": "contentlayer build || true",
+    "update-categories": "bun run scripts/update-categories.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
@@ -56,9 +57,11 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/dotenv": "^8.2.3",
     "@types/node": "^20",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
