refactor(build): update build script and add sync script; remove unused category import scripts
This commit modifies the build script in package.json to include a new sync step for data synchronization before building. Additionally, it introduces a new sync script for data management. The commit also removes the outdated import-categories and update-categories scripts, streamlining the codebase and improving maintainability.

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "bun --bun next dev",
-    "build": "contentlayer build || true && bun --bun next build",
+    "build": "bun run scripts/toolify-sync.ts && contentlayer build || true && bun --bun next build",
     "start": "bun --bun next start",
     "lint": "bun --bun next lint",
     "blog": "contentlayer build || true",
-    "update-categories": "bun run scripts/update-categories.ts"
+    "sync": "bun run scripts/sync-data.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
