--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "bun --bun next start",
     "lint": "bun --bun next lint",
     "blog": "contentlayer build || true",
-    "sync": "bun run scripts/sync-data.ts"
+    "sync": "bun run scripts/sync-data.ts",
+    "sync:complete": "bun run scripts/complete-sync-data.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
