feat(docs): update README with automation sync features and add SETUP_GUIDE.md to .gitignore
This commit enhances the README by introducing sections on automated data synchronization, including setup and configuration commands. It also adds a link to the new SETUP_GUIDE.md for detailed deployment instructions. Additionally, SETUP_GUIDE.md is now included in the .gitignore to prevent it from being tracked in version control.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "bun --bun next lint",
     "blog": "contentlayer build || true",
     "sync": "bun run scripts/sync-data.ts",
-    "sync:complete": "bun run scripts/complete-sync-data.ts"
+    "sync:complete": "bun run scripts/complete-sync-data.ts",
+    "sync:api-test": "bun run scripts/test-sync-api.ts",
+    "sync:check-config": "bun run scripts/check-config.ts",
+    "sync:setup": "bun run scripts/setup-automation.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
