--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "bun --bun next dev",
-    "build": "bun run blog && bun --bun next build",
-    "start": "bun --bun next start",
-    "lint": "bun --bun next lint",
+    "dev": "next dev",
+    "build": "contentlayer build && next build",
+    "start": "next start",
+    "lint": "next lint",
     "blog": "contentlayer build || true",
     "sync": "bun run scripts/sync-data.ts"
   },
