--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "ahooks": "^3.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "contentlayer": "^0.3.4",
